Use json for display and not mess with it
